# backend/src/docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0.0",
     "info": {
         "version": "beta",
-        "title": "Cadastros de Cargos",
+        "title": "Cadastros de Funcionários",
         "contact": {
             "email": "andradem45678@gmail.com"
         }
@@ -17,10 +17,6 @@
         {
             "name": "Funcionário",
             "description": "Referente ao cadastro de Funcionário em geral."
-        },
-        {
-            "name": "Cargos dos Funcionário",
-            "description": "Referente ao cadastro de Cargos dos Funcionário em geral."
         }
     ],
     "schemes": [
@@ -291,122 +287,7 @@
                     }
                 }
             }
-        },
-        "/companyPositions": {
-            "post": {
-                "tags": [
-                    "Cargos dos Funcionário"
-                ],
-                "description": "Recebe um JSON para cadastrar o cargo funcionário.",
-                "parameters": [
-                    {
-                        "name": "obj",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/components/schemas/CompanyPositions"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            },
-            "get": {
-                "tags": [
-                    "Cargos dos Funcionário"
-                ],
-                "description": "Retornar um array com todos os cargo funcionário cadastrados.",
-                "parameters": [],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/companyPositions/{id}": {
-            "get": {
-                "tags": [
-                    "Cargos dos Funcionário"
-                ],
-                "description": "Busca um cargo do funcionário em específico.",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "type": "number"
-                    }
-                ],
-                "responses": {}
-            },
-            "put": {
-                "tags": [
-                    "Cargos dos Funcionário"
-                ],
-                "description": "Recebe um JSON para atualizar um cargo funcionário em específico.",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "type": "number"
-                    },
-                    {
-                        "name": "obj",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/components/schemas/CompanyPositions"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            },  
-            "delete": {
-                "tags": [
-                    "Cargos dos Funcionário"
-                ],
-                "description": "Deleta um cargo funcionário.",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
         }
-        
     },
     "components": {
         "schemas": {
@@ -446,19 +327,6 @@
                     "email": {
                         "type": "string",
                         "example": "Exemplo@exemplo.com"
-                    }
-                }
-            },
-            "CompanyPositions": {
-                "type": "object",
-                "properties": {
-                    "employeeId": {
-                        "type": "number",
-                        "example": 1
-                    },
-                    "positionId": {
-                        "type": "number",
-                        "example": 1
                     }
                 }
             }
