# backend/src/routes/index.js
@@ -1,6 +1,4 @@
 module.exports = [
     require('./employees.routes'),
     require('./positions.routes'),
-    require('./companyPositions.routes')
-
 ]
